--- a/mobile_app/android/app/src/main/AndroidManifest.xml
+++ b/mobile_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="DPI Platform"
+        android:label="Seva Setu"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
