--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -47,8 +47,8 @@ flutter:
   uses-material-design: true
   
   # Assets
-  # assets:
-  #   - images/
+  assets:
+    - assets/images/
   
   # Fonts
   # fonts:
